# GTAVisionExport

./: .gitignore  LICENSE  README.md  database_schema_old.sql  db_schema.sql
managed/: .gitignore  .gitlab-ci.yml  GTAVision.ini  GTAVisionExport.sln  README.md  docker-compose.yml  structure_dump.sql
managed/GTAVisionExport/: CameraHandling.cs  CamerasList.cs  GTAVisionExport.csproj  GTAVisionExport.csproj.lgv-01.nvuser  GameUtils.cs  OffroadPlanning.cs  StereoCamera.cs  TestVehicle.cs  VisionExport.cs  packages.config
managed/GTAVisionExport/Properties/: AssemblyInfo.cs
managed/GTAVisionUtils/: App.config  ConfigUtils.cs  GTADataStructures.cs  GTAVisionUtils.csproj  GdalConfiguration.cs  GdalConfiguration.vb  HashFunctions.cs  ImageUtils.cs  InstanceData.cs  Logger.cs  MathUtils.cs  NativeInterop.cs  PostgresExport.cs  WMIInformation.cs  packages.config
managed/GTAVisionUtils/Properties/: AssemblyInfo.cs
managed/ImageViewer/: ImageViewer.csproj  MainWindow.Designer.cs  MainWindow.cs  Program.cs
managed/ImageViewer/Properties/: AssemblyInfo.cs  Settings.Designer.cs  (+1 more)
managed/Sandbox/: MainClass.cs  Sandbox.csproj  sandbox.sql
native/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
native/cmake/: FindDirectXTex.cmake  HunterGate.cmake
native/src/: CMakeLists.txt  GTAVisionNative.vcxproj  GTAVisionNative.vcxproj.filters  MinHook.h  cmake_install.cmake  export.cpp  export.h  main.cpp
native/src/Memory/: GameMemory.cpp  GameMemory.h  Hooking.cpp  Includes.h  Memory.cpp  Memory.h
native/src/Utilities/: Callstack.cpp  Callstack.h  Module.cpp  Module.h
